# colour-science.org

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTORS.rst  LICENSE  README.rst  conf.py  pyproject.toml  tasks.py
files/: .htaccess  analytics_tracking.php  github.php
files/anders-langlands/: index.html
files/cgi-bin/: common.py  rgb_colourspace_models_chromatically_adapted_derivation.cgi  rgb_colourspace_models_derivation.cgi  rgb_colourspace_models_transformation_matrices.cgi  rgb_colourspace_models_transformation_matrix.cgi
output/: .htaccess  archive.html  index.html  index.php  index.rst  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml
output/2014/: index.html
output/2015/: index.html
pages/: 404.rst  api-reference.rst  api-status-and-badges.rst  apps.rst  bibliography.rst  cited-by.rst  code-of-conduct.rst  colour-checker-detection.rst  colour-datasets.rst  colour-demosaicing.rst  colour-hdri.rst  colour-maya.rst  colour-nuke.rst  colour-playground.rst  colour-science-for-python.ipynb  colour-spectroscope.rst  colour-visuals.rst  colour.rst  contributing.rst  contributors.rst  development-env-macos.rst  experiments.rst  features.rst  history.rst  index.rst  installation-guide.rst  search.rst  setting-up-the-development-environment-on-macos.rst  tutorial.ipynb  tutorial.rst
plugins/: __init__.py
posts/: a-new-logo-and-website.rst  a-plea-for-colour-analysis-tools-in-dcc-applications.ipynb  about-rendering-engines-colourspace-agnosticism.ipynb  about-rendering-engines-colourspaces-agnosticism.ipynb  anders-langlands-render-color-spaces.rst  colour-0310-is-available.rst  colour-0311-is-available.rst  colour-0312-colour-checker-detection-010.rst  colour-0313-is-available.rst  colour-0315-is-available.rst  colour-0316-is-available.rst  colour-033-is-available.rst  colour-034-is-available.rst  colour-035-is-available.rst  colour-036-is-available.rst  colour-037-is-available.rst  colour-038-is-available.rst  colour-039-colour-hdri-012-aces.rst  colour-040-is-available.rst  colour-042-is-available.rst  colour-043-is-available.rst  colour-044-is-available.rst  colour-045-is-available.rst  colour-047-is-available.rst  colour-checker-detection-with-machine-learning.rst  demosaicing-and-hdri-with-python.rst  numfocus-colour-0314-and-colour-datasets-010.rst  our-first-1000-stars-on-github.rst  physical-lighting-quantities-tying-both-ends.rst  pycharm-vagrant-ansible-poetry.rst  pycharm-vagrant-fabric-anaconda.rst  srgb-eotf-pure-gamma-22-function-or-piece-wise-function.rst  support-for-clf-in-colour-available.rst  support-for-cxf-in-colour-available.rst  the-colorchecker-considered-mostly-harmless.rst  the-first-public-release-of-colour-is-available.rst  the-importance-of-terminology-and-srgb-uncertainty.rst  the-road-to-stable.rst
stories/: 404.rst  api-reference.rst  api-status-and-badges.rst  apps.rst  bibliography.rst  cited-by.rst  colour-demosaicing.rst  colour-hdri.rst  colour-maya.rst  colour-nuke.rst  colour-playground.rst  colour-science-for-python.ipynb  colour-spectroscope.rst  contributing.rst  contributors.rst  experiments.rst  faq.rst  features.rst  history.rst  index.rst  installation-guide.rst  search.rst  tutorial.ipynb  utilities.rst
(+4627 files in other folders)
