[tool.poetry]
name = "colour-science.org"
version = "1.0.0"
description = "Website code for https://www.colour-science.org/"
authors = [ "Colour Developers <colour-developers@colour-science.org>" ]
maintainers = [ "Colour Developers <colour-developers@colour-science.org>" ]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">= 3.9, < 3.12"
nikola = { extras = [ "extras" ], version = ">= 8, < 9" }

black = { version = "*", optional = true }  # Development dependency.
flake8 = { version = "*", optional = true }  # Development dependency.
flynt = { version = "*", optional = true }  # Development dependency.
invoke = { version = "*", optional = true }  # Development dependency.
pre-commit = { version = "*", optional = true }  # Development dependency.
pyupgrade = { version = "*", optional = true }  # Development dependency.

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flynt = "*"
invoke = "*"
pre-commit = "*"
pyupgrade = "*"

[tool.poetry.extras]
development = [
    "black",
    "flake8",
    "flynt",
    "invoke",
    "pre-commit",
    "pyupgrade",
]

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.mypy_cache
  | cache
  | output
  | pages
  | plugins
  | posts
)/
'''

[tool.flynt]
line_length=999
exclude = '''
/(
    cache
  | output
  | plugins
)/
'''

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
