[project]
name = "colour-science.org"
version = "1.0.0"
description = "Website code for https://www.colour-science.org/"
readme = "README.rst"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Colour Developers", email = "colour-developers@colour-science.org" },
]
maintainers = [
    { name = "Colour Developers", email = "colour-developers@colour-science.org" }
]
license = { text = "BSD-3-Clause" }

dependencies = [
    "nikola[extras]>=8,<9",
]

[project.optional-dependencies]
optional = [
    "colour-science @ git+https://github.com/colour-science/colour.git@develop",
    "colour-datasets>=0.2.7",
    "matplotlib>=3.9",
    "notebook>=7.2.0",
    "networkx>=3.3,<4",
    "openimageio>=3,<4",
]

[project.urls]
Homepage = "https://www.colour-science.org"
Repository = "https://github.com/colour-science/colour-science.org"
Issues = "https://github.com/colour-science/colour-science.org/issues"

[tool.uv]
dev-dependencies = [
    "invoke",
    "pre-commit",
]
